--- a/[Gulp build] template_project/src/index.html
+++ b/[Gulp build] template_project/src/index.html
@@ -23,9 +23,9 @@
 	<body>
 		<!-- Wrapper -->
 		<div class="wrapper">
-			<header class="header"></header>
-			<main class="main"></main>
-			<footer class="footer"></footer>
+			<header></header>
+			<main></main>
+			<footer></footer>
 		</div>
 		<!-- Wrapper -->
 
