--- a/[Gulp build] template_project/src/index.html
+++ b/[Gulp build] template_project/src/index.html
@@ -21,9 +21,9 @@
 		<!-- Не забываем подключить css/fonts.css, если имеются шрифты в папке fonts/ -->
 	</head>
 	<body>
-		<header></header>
-		<main></main>
-		<footer></footer>
+		<header class="header"></header>
+		<main class="main"></main>
+		<footer class="footer"></footer>
 
 		<!-- Scripts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
