--- a/[Gulp build] template_project/src/index.html
+++ b/[Gulp build] template_project/src/index.html
@@ -26,7 +26,7 @@
 		<footer class="footer"></footer>
 
 		<!-- Scripts -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script src="js/checkSupportWebP.js"></script>
 		<script src="js/index.js"></script>
 		<!-- Scripts -->
