--- a/[Gulp build] template_project/src/index.html
+++ b/[Gulp build] template_project/src/index.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<header class="header"></header>
-		<main class="main"></main>
+		<main class="page"></main>
 		<footer class="footer"></footer>
 
 		<!-- Scripts -->
