--- a/Projects/Escape/src/index.html
+++ b/Projects/Escape/src/index.html
@@ -24,15 +24,15 @@
 	<body>
 		<header class="header" id="header">
 			<div class="container header__container">
-				<a class="logo" href="#header">Escape.</a>
+				<a class="logo slowScroll" href="#header">Escape.</a>
 				<nav class="header__nav">
 					<button class="header__menu-toggler_on"><span class="header__menu-toggler_row"></span></button>
 					<ul class="menu header-menu">
 						<li class="header-menu__button-close"><button class="header__menu-toggler_off"></button></li>
-						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link" href="#header">Home</a></li>
-						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link" href="#header">Categories</a></li>
-						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link" href="#header">About</a></li>
-						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link" href="#header">Contact</a></li>
+						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link slowScroll" href="#header">Home</a></li>
+						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link slowScroll" href="#header">Categories</a></li>
+						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link slowScroll" href="#header">About</a></li>
+						<li class="menu__item header-menu__item"><a class="menu__link header-menu__link slowScroll" href="#header">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -44,7 +44,7 @@
 						<h1 class="main-block__main-title">Let's do it together.</h1>
 						<h3 class="main-block__mini-title">We travel the world in search of stories. Come along for the ride.</h3>
 					</div>
-					<a class="main-block__button" href="#">View Latest Posts</a>
+					<a class="main-block__button slowScroll" href="#featured-posts">View Latest Posts</a>
 				</div>
 			</section>
 			<div class="blog-type">
@@ -57,11 +57,11 @@
 					<p class="blog-type__item">Adventure</p>
 				</div>
 			</div>
-			<section class="posts featured-posts">
+			<section class="posts featured-posts" id="featured-posts">
 				<div class="container">
 					<h2 class="posts__title featured-posts__title">Featured Posts</h2>
 					<div class="posts__item-box featured-posts__item-box">
-						<a class="post-item featured-item" href="#">
+						<a class="post-item featured-item slowScroll" href="#featured-posts">
 							<img class="featured-item__img" src="images/post-1.jpg" alt="Post background">
 							<div class="featured-item__content">
 								<div class="featured-item__top-text">
@@ -77,7 +77,7 @@
 								</div>
 							</div>
 						</a>
-						<a class="post-item featured-item" href="#">
+						<a class="post-item featured-item slowScroll" href="#featured-posts">
 							<img class="featured-item__img" src="images/post-2.jpg" alt="Post background">
 							<div class="featured-item__content">
 								<p class="featured-item__mark">Adventure</p>
@@ -97,11 +97,11 @@
 					</div>
 				</div>
 			</section>
-			<section class="posts recent-posts">
+			<section class="posts recent-posts" id="recent-posts">
 				<div class="container">
 					<h2 class="posts__title recent-posts__title">Most Recent</h2>
 					<div class="posts__item-box recent-posts__item-box">
-						<a class="post-item recent-item" href="#">
+						<a class="post-item recent-item slowScroll" href="#recent-posts">
 							<img class="recent-item__img" src="images/post-3.jpg" alt="Post background">
 							<div class="recent-item__top-text">
 								<h4 class="recent-item__title">Still Standing Tall</h4>
@@ -115,7 +115,7 @@
 								<p class="post-item__date recent-item__date">9/25/2015</p>
 							</div>
 						</a>
-						<a class="post-item recent-item" href="#">
+						<a class="post-item recent-item slowScroll" href="#recent-posts">
 							<img class="recent-item__img" src="images/post-4.jpg" alt="Post background">
 							<div class="recent-item__top-text">
 								<h4 class="recent-item__title">Sunny Side Up</h4>
@@ -129,7 +129,7 @@
 								<p class="post-item__date recent-item__date">9/25/2015</p>
 							</div>
 						</a>
-						<a class="post-item recent-item" href="#">
+						<a class="post-item recent-item slowScroll" href="#recent-posts">
 							<img class="recent-item__img" src="images/post-5.jpg" alt="Post background">
 							<div class="recent-item__top-text">
 								<h4 class="recent-item__title">Water Falls</h4>
@@ -143,7 +143,7 @@
 								<p class="post-item__date recent-item__date">9/25/2015</p>
 							</div>
 						</a>
-						<a class="post-item recent-item" href="#">
+						<a class="post-item recent-item slowScroll" href="#recent-posts">
 							<img class="recent-item__img" src="images/post-6.jpg" alt="Post background">
 							<div class="recent-item__top-text">
 								<h4 class="recent-item__title">Through the Mist</h4>
@@ -157,7 +157,7 @@
 								<p class="post-item__date recent-item__date">9/25/2015</p>
 							</div>
 						</a>
-						<a class="post-item recent-item" href="#">
+						<a class="post-item recent-item slowScroll" href="#recent-posts">
 							<img class="recent-item__img" src="images/post-7.jpg" alt="Post background">
 							<div class="recent-item__top-text">
 								<h4 class="recent-item__title">Awaken Early</h4>
@@ -171,7 +171,7 @@
 								<p class="post-item__date recent-item__date">9/25/2015</p>
 							</div>
 						</a>
-						<a class="post-item recent-item" href="#">
+						<a class="post-item recent-item slowScroll" href="#recent-posts">
 							<img class="recent-item__img" src="images/post-8.jpg" alt="Post background">
 							<div class="recent-item__top-text">
 								<h4 class="recent-item__title">Try it Always</h4>
@@ -189,7 +189,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer" id="#footer">
 			<section class="feedback">
 				<div class="container">
 					<h2 class="feedback__title">Stay in Touch</h2>
@@ -201,12 +201,12 @@
 			</section>
 			<div class="footer-bottom">
 				<div class="container footer-bottom__container">
-					<a class="logo" href="#">Escape.</a>
+					<a class="logo slowScroll" href="#header">Escape.</a>
 					<ul class="menu footer-menu">
-						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link" href="#footer">Home</a></li>
-						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link" href="#footer">Categories</a></li>
-						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link" href="#footer">About</a></li>
-						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link" href="#footer">Contact</a></li>
+						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link slowScroll" href="#header">Home</a></li>
+						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link slowScroll" href="#footer">Categories</a></li>
+						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link slowScroll" href="#footer">About</a></li>
+						<li class="menu__item footer-menu__item"><a class="menu__link footer-menu__link slowScroll" href="#footer">Contact</a></li>
 					</ul>
 				</div>
 			</div>
