--- a/Projects/Antools/src/index.html
+++ b/Projects/Antools/src/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>Document</title>
+		<title>antools.</title>
 		<!-- Main settings -->
 
 		<!-- Fonts -->
@@ -33,7 +33,7 @@
 				<nav class="header__nav">
 					<button class="menu-burger"><span class="menu-burger__row"></span></button>
 					<ul class="menu">
-						<li class="menu__item"><a class="menu__link slowScroll" href="#header">Home</a></li>
+						<li class="menu__item menu__item_home"><a class="menu__link slowScroll" href="#header">Home</a></li>
 						<li class="menu__item menu__item_drop-down">
 							<a class="menu__link slowScroll" href="#header">
 								<p class="menu__link-text">Categories</p>
