Update account pages

--- a/Projects/BreakableEcology/src/login-page.html
+++ b/Projects/BreakableEcology/src/login-page.html
@@ -85,7 +85,7 @@
 				<div class="account">
 					<div class="account__top-box">
 						<h2 class="account__title">Вход в аккаунт</h2>
-						<button class="account__close-button"><img src="images/account/close.svg" alt="Close button"></button>
+						<a class="account__close-button" href="index.html"><img src="images/account/close.svg" alt="Close button"></a>
 					</div>
 					<form class="account-form" action="">
 						<div class="account-form__input-box">
