Update alt language for images

--- a/Projects/BreakableEcology/src/index.html
+++ b/Projects/BreakableEcology/src/index.html
@@ -25,14 +25,14 @@
 			<header class="header" id="header">
 				<div class="container">
 					<div class="header-top">
-						<a class="logo" href="index.html"><img class="logo__img" src="images/header/logo.png" alt="Logo"></a>
+						<a class="logo" href="index.html"><img class="logo__img" src="images/header/logo.png" alt="Логотип"></a>
 						<div class="header-top__button-box">
 							<a class="telephone-button header-top__button-telephone" href="tel:+79209994350">
-								<img class="telephone-button__icon" src="images/header/phone.svg" alt="Phone">
+								<img class="telephone-button__icon" src="images/header/phone.svg" alt="Телефон">
 								<p class="telephone-button__text header-top__telephone-text">8 920 999 43 50</p>
 							</a>
 							<a class="button-cart slowScroll" href="#header">
-								<img class="button-cart__img" src="images/header/cart.svg" alt="Cart">
+								<img class="button-cart__img" src="images/header/cart.svg" alt="Корзина">
 								<p class="button-account__count-products">2</p>
 							</a>
 							<button class="button-account">
@@ -114,7 +114,7 @@
 							<p class="page__title">Готовые миксы</p>
 							<a class="page__list slowScroll" href="#mixes">
 								<p class="page__list-text">Ещё</p>
-								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Arrow down">
+								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Стрелочка вниз">
 							</a>
 						</div>
 						<div class="page__item-box mixes__item-box">
@@ -209,7 +209,7 @@
 							<p class="page__title">Виды птиц</p>
 							<a class="page__list" href="#birds">
 								<p class="page__list-text">Ещё</p>
-								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Arrow down">
+								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Стрелочка вниз">
 							</a>
 						</div>
 						<div class="page__item-box birds__item-box">
@@ -246,7 +246,7 @@
 							<p class="page__title">Зёрна</p>
 							<a class="page__list" href="#food">
 								<p class="page__list-text">Ещё</p>
-								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Arrow down">
+								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Стрелочка вниз">
 							</a>
 						</div>
 						<div class="page__item-box food__item-box">
@@ -340,7 +340,7 @@
 							<p class="page__title">Кормушки</p>
 							<a class="page__list" href="feeder-page.html">
 								<p class="page__list-text">Ещё</p>
-								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Arrow down">
+								<img class="page__list-img" src="images/main/arrow-green.svg" alt="Стрелочка вниз">
 							</a>
 						</div>
 						<div class="page__item-box feeder__item-box">
@@ -397,7 +397,7 @@
 							</form>
 						</div>
 						<div class="donat-gift">
-							<img class="donat-gift__img" src="images/first-page/iphone.png" alt="Iphone">
+							<img class="donat-gift__img" src="images/first-page/iphone.png" alt="Айфон">
 							<div class="donat-gift__content">
 								<h3 class="donat-gift__title">Выберите подарок:</h3>
 								<div class="donat-gift__item-box">
@@ -427,11 +427,11 @@
 						<li class="footer-menu__item"><a class="footer-menu__link" href="buyInfo-page.html">Доставка</a></li>
 					</ul>
 					<div class="footer-socials">
-						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/vk.png" alt="VK"></a>
-						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/instagram.png" alt="Instagram"></a>
+						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/vk.png" alt="ВК"></a>
+						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/instagram.png" alt="Инстаграм"></a>
 					</div>
 					<a class="telephone-button footer__button-telephone" href="tel:+79209994350">
-						<img class="telephone-button__icon" src="images/footer/phone.svg" alt="Phone">
+						<img class="telephone-button__icon" src="images/footer/phone.svg" alt="Телефон">
 						<p class="telephone-button__text">8 920 999 43 50</p>
 					</a>
 				</div>
