--- a/Projects/BreakableEcology/src/feeder-page.html
+++ b/Projects/BreakableEcology/src/feeder-page.html
@@ -25,14 +25,14 @@
 			<header class="header" id="header">
 				<div class="container">
 					<div class="header-top">
-						<a class="logo" href="index.html"><img class="logo__img" src="images/header/logo.png" alt="Logo"></a>
+						<a class="logo" href="index.html"><img class="logo__img" src="images/header/logo.png" alt="Логотип"></a>
 						<div class="header-top__button-box">
 							<a class="telephone-button header-top__button-telephone" href="tel:+79209994350">
-								<img class="telephone-button__icon" src="images/header/phone.svg" alt="Phone">
+								<img class="telephone-button__icon" src="images/header/phone.svg" alt="Телефон">
 								<p class="telephone-button__text header-top__telephone-text">8 920 999 43 50</p>
 							</a>
 							<a class="button-cart" href="#header">
-								<img class="button-cart__img" src="images/header/cart.svg" alt="Cart">
+								<img class="button-cart__img" src="images/header/cart.svg" alt="Корзина">
 								<p class="button-account__count-products">2</p>
 							</a>
 							<button class="button-account">
@@ -89,7 +89,7 @@
 							<li class="bread-crumbs__item"><a class="bread-crumbs__link slowScroll" href="#header">Кормушки</a></li>
 						</ul>
 						<a class="back-button" href="index.html">
-							<img class="back-button__img" src="images/main/arrow-green.svg" alt="Arrow left">
+							<img class="back-button__img" src="images/main/arrow-green.svg" alt="Стрелочка влево">
 							<p class="back-button__text">Назад</p>
 						</a>
 						<div class="page__item-box feeder__item-box">
@@ -149,11 +149,11 @@
 						<li class="footer-menu__item"><a class="footer-menu__link" href="buyInfo-page.html">Доставка</a></li>
 					</ul>
 					<div class="footer-socials">
-						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/vk.png" alt="VK"></a>
-						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/instagram.png" alt="Instagram"></a>
+						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/vk.png" alt="ВК"></a>
+						<a class="footer-socials__button slowScroll" href="#footer"><img class="footer-socials__button-img" src="images/footer/instagram.png" alt="Инстаграм"></a>
 					</div>
 					<a class="telephone-button footer__button-telephone" href="tel:+79209994350">
-						<img class="telephone-button__icon" src="images/footer/phone.svg" alt="Phone">
+						<img class="telephone-button__icon" src="images/footer/phone.svg" alt="Телефон">
 						<p class="telephone-button__text">8 920 999 43 50</p>
 					</a>
 				</div>
