--- a/Gulp/Old/src/index.html
+++ b/Gulp/Old/src/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<header class="header"></header>
-		<main class="page"></main>
+		<main class="main"></main>
 		<footer class="footer"></footer>
 
 		<!-- Scripts -->
