--- a/antools/src/index.html
+++ b/antools/src/index.html
@@ -33,7 +33,7 @@
 				<nav class="header__nav">
 					<button class="menu-burger"><span class="menu-burger__row"></span></button>
 					<ul class="menu">
-						<li class="menu__item menu__item_home"><a class="menu__link slowScroll" href="#header">Home</a></li>
+						<li class="menu__item menu__item_home"><a class="menu__link menu__link_clickable slowScroll" href="#header">Home</a></li>
 						<li class="menu__item menu__item_drop-down">
 							<a class="menu__link slowScroll" href="#header">
 								<p class="menu__link-text">Categories</p>
@@ -47,8 +47,8 @@
 								<li class="categories-menu__item"><a class="categories-menu__link slowScroll" href="#header">Categories 3</a></li>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link slowScroll" href="#header">My Collections</a></li>
-						<li class="menu__item"><a class="menu__link slowScroll" href="#header">Blog</a></li>
+						<li class="menu__item"><a class="menu__link menu__link_clickable slowScroll" href="#header">My Collections</a></li>
+						<li class="menu__item"><a class="menu__link menu__link_clickable slowScroll" href="#header">Blog</a></li>
 					</ul>
 				</nav>
 				<div class="header__button-box">
