Fixed menu clicks

--- a/antools/src/index.html
+++ b/antools/src/index.html
@@ -42,9 +42,9 @@
 								</svg>
 							</a>
 							<ul class="categories-menu">
-								<li class="categories-menu__item"><a class="categories-menu__link slowScroll" href="#header">Categories 1</a></li>
-								<li class="categories-menu__item"><a class="categories-menu__link slowScroll" href="#header">Categories 2</a></li>
-								<li class="categories-menu__item"><a class="categories-menu__link slowScroll" href="#header">Categories 3</a></li>
+								<li class="categories-menu__item"><a class="categories-menu__link menu__link_clickable slowScroll" href="#header">Categories 1</a></li>
+								<li class="categories-menu__item"><a class="categories-menu__link menu__link_clickable slowScroll" href="#header">Categories 2</a></li>
+								<li class="categories-menu__item"><a class="categories-menu__link menu__link_clickable slowScroll" href="#header">Categories 3</a></li>
 							</ul>
 						</li>
 						<li class="menu__item"><a class="menu__link menu__link_clickable slowScroll" href="#header">My Collections</a></li>
